@@ -27,6 +27,10 @@ IN DEVELOPMENT
 
   BUGFIXES:
 
+    * ``bzr annotate`` now uses dotted revnos from the viewpoint of the
+      branch, rather than the last changed revision of the file.
+      (John Arbash Meinel, #82158)
+
   TESTING:
 
     * New ``--first`` option to ``bzr selftest`` to run specified tests
